Stay Current update

--- a/learn-certs-pr/TOC.yml
+++ b/learn-certs-pr/TOC.yml
@@ -48,6 +48,8 @@
     href: college-credit-for-certification-exams.md
   - name: Studentenermäßigungen
     href: student-discounts.md
+- name: Erneuern Sie Ihre Microsoft Zertifizierung
+  href: renew-your-microsoft-certification.md
 - name: Hilfe zur Zertifizierung
   href: help.md
 - name: Hilfe mit Microsoft Official Courseware (MOC)
